--- a/speakers.yaml
+++ b/speakers.yaml
@@ -3,6 +3,6 @@
   twitter: faniereynders
   blogUrl: http://reynders.co
   imageUrl: http://reynders.co/content/images/2015/12/20150816_184719000_iOS.jpg
-  bio: bla1
+  bio: bla
   
 
