--- a/speakers.yaml
+++ b/speakers.yaml
@@ -5,4 +5,10 @@
   imageUrl: http://reynders.co/content/images/2015/12/20150816_184719000_iOS.jpg
   bio: some desc
   
+- name: Tanya Fouche
+  title: Software developer
+  twitter: tanya
+  blogUrl: http://reynders.co
+  imageUrl: https://media.licdn.com/media/p/3/005/04e/004/2524ea2.jpg
+  bio: some desc
 
