--- a/posts.yaml
+++ b/posts.yaml
@@ -6,7 +6,7 @@
   sessionId: 2feb2016.1
 
 - date: 3 Feb 2016
-  post: test-post2.md
+  content: test-post2.md
   author: Fanie Reynders
   title: Testing Blog Post 2
   abstract: bla
