--- a/events.yaml
+++ b/events.yaml
@@ -10,7 +10,7 @@
     speaker: Fanie Reynders
     videoUrl: http://a.com
     description: blah bla test
-    slides: 94c14e38a54741c58e643bf22cd1119d
+    slidesId: 94c14e38a54741c58e643bf22cd1119d
   - id: 2feb2016.2
     from: 2 feb 2016 10:30 AM
     to: 2 feb 2016 11:32 PM
@@ -18,7 +18,7 @@
     speaker: Fanie Reynders
     description: blah bla test 2
     videoUrl: http://b.com
-    slides: 94c14e38a54741c58e643bf22cd1119d
+    slidesId: 94c14e38a54741c58e643bf22cd1119d
   - id: 2feb2016.3
     from: 2 feb 2016 10:35 AM
     to: 2 feb 2016 11:37 PM
@@ -26,7 +26,8 @@
     speaker: Fanie Reynders
     description: blah bla test 2
     videoUrl: https://www.youtube.com/embed/goH-Pv1w6xo?rel=0&amp;showinfo=0
-
+    slidesId: 94c14e38a54741c58e643bf22cd1119d
+    
 - date: 2 mar 2016
   title: March Meetup
   description: blah
@@ -39,6 +40,7 @@
     speaker: Fanie Reynders
     description: blah bla test
     videoUrl: http://c.com
+    slidesId: 94c14e38a54741c58e643bf22cd1119d
   - id: 2mar2016.2
     from: 2 mar 2016 11:52 AM
     to: 2 mar 2016 12:00 PM
@@ -46,3 +48,4 @@
     speaker: Fanie Reynders
     description: blah bla test 2
     videoUrl: http://d.com
+    slidesId: 94c14e38a54741c58e643bf22cd1119d
