--- a/events.yaml
+++ b/events.yaml
@@ -8,7 +8,7 @@
     to: 2 feb 2016 10:20 AM
     title: Test talk
     speaker: Fanie Reynders
-    videoUrl: http://a.com
+    videoUrl: //www.youtube.com/embed/eHqwgbspZWc
     description: blah bla test
     slidesId: 94c14e38a54741c58e643bf22cd1119d
   - id: 2feb2016.2
