--- a/events.yaml
+++ b/events.yaml
@@ -15,7 +15,7 @@
     from: 2 feb 2016 10:30 AM
     to: 2 feb 2016 11:32 PM
     title: Test talk 2
-    speaker: Fanie Reynders
+    speaker: Fanie Reynderz
     description: blah bla test 2
     videoId: eHqwgbspZWc
     slidesId: 94c14e38a54741c58e643bf22cd1119d
