--- a/posts.yaml
+++ b/posts.yaml
@@ -7,6 +7,6 @@
 
 - date: 3 Feb 2016
   postId: test-post2
-  author: Fanie Reynders
+  author: Some guy
   title: Testing Blog Post 2
   abstract: bla
