--- a/posts.yaml
+++ b/posts.yaml
@@ -1,3 +1,9 @@
+- date: 1 Feb 2016
+  postId: test-post3
+  author: Tanya Fouche
+  title: Testing Blog Post 2
+  abstract: bla
+  
 - date: 2 Feb 2016
   postId: test-post
   author: Fanie Reynders
