--- a/events.yaml
+++ b/events.yaml
@@ -9,7 +9,7 @@
     title: Test talk
     speaker: Fanie Reynders
     videoId: eHqwgbspZWc
-    description: blah bla test
+    description: blah bla test test
     slidesId: 94c14e38a54741c58e643bf22cd1119d
   - id: 2feb2016.2
     from: 2 feb 2016 10:30 AM
