--- a/2016/events.yaml
+++ b/2016/events.yaml
@@ -1,4 +1,5 @@
-- title: Feb Meetup
+- date: 2 Feb 2016
+  title: Feb Meetup
   description: blah
   registerUrl: "//eventbrite.com/tickets-external?eid=20710793541&ref=etckt"
   
@@ -31,7 +32,8 @@
     completed: false
     
     
-- title: March Meetup
+- date: 2 Mar 2016
+  title: March Meetup
   description: blah
   registerUrl: http://bbb.com
   
