--- a/2016/events.yaml
+++ b/2016/events.yaml
@@ -11,7 +11,7 @@
     videoId: eHqwgbspZWc
     description: blah bla test test
     slidesId: 94c14e38a54741c58e643bf22cd1119d
-    completed: false
+    completed: true
     
   - id: 2feb2016.2
     start: 2 feb 2016 10:30 AM
