--- a/2016/events.yaml
+++ b/2016/events.yaml
@@ -29,7 +29,7 @@
     description: blah bla test 2
     videoId: eHqwgbspZWc
     slidesId: 94c14e38a54741c58e643bf22cd1119d
-    completed: false
+    completed: true
     
     
 - date: 2 Mar 2016
