--- a/2016/events.yaml
+++ b/2016/events.yaml
@@ -5,7 +5,7 @@
   
   sessions:
   - id: 23mar2016.1
-    start: 23 Mar 2016 7:00 PM
+    start: 23 Mar 2016 19:00
     title: Running Windows 10 IoT Core on a Raspberry Pi
     speaker: Marcel Meijer
     videoId: 
@@ -14,7 +14,7 @@
     completed: false
     
   - id: 23mar2016.2
-    start: 23 Mar 2016 7:45 PM
+    start: 23 Mar 2016 19:45
     title: ASP.NET MVC Core 1.0: The new kid on the block
     speaker: Fanie Reynderz
     description: todo
