--- a/2016/events.yaml
+++ b/2016/events.yaml
@@ -8,9 +8,9 @@
     start: 23 Mar 2016 19:00
     title: Running Windows 10 IoT Core on a Raspberry Pi
     speaker: Marcel Meijer
-    videoId: 
+    videoId: .
     description: todo
-    slidesId: 
+    slidesId: .
     completed: false
     
   - id: 23mar2016.2
@@ -18,7 +18,7 @@
     title: ASP.NET MVC Core 1.0: The new kid on the block
     speaker: Fanie Reynderz
     description: todo
-    videoId: 
-    slidesId: 
+    videoId: .
+    slidesId: .
     completed: false
     
