--- a/2016/events.yaml
+++ b/2016/events.yaml
@@ -15,7 +15,7 @@
     
   - id: 23mar2016.2
     start: 23 Mar 2016 19:45
-    title: ASP.NET MVC Core 1.0: The new kid on the block
+    title: "ASP.NET MVC Core 1.0: The new kid on the block"
     speaker: Fanie Reynderz
     description: todo
     videoId: .
