--- a/2016/events.yaml
+++ b/2016/events.yaml
@@ -1,4 +1,4 @@
-- date: 23 Mar 2016
+- date: 23 Mar 2016 19:00
   title: March Meetup
   description: An evening filled with Windows IoT Core on Raspberry Pi and ASP.NET MVC 6
   registerUrl: "//eventbrite.com/tickets-external?eid=20710793541&ref=etckt"
