--- a/2016/events.yaml
+++ b/2016/events.yaml
@@ -1,6 +1,6 @@
 - date: 23 Mar 2016 19:00
   title: March Meetup
-  description: An evening filled with Windows IoT Core on Raspberry Pi and ASP.NET MVC 6
+  description: Een gratis seminar over Windows IoT Core, Raspberry Pi & ASP.NET MVC 6
   registerUrl: "//eventbrite.com/tickets-external?eid=20710793541&ref=etckt"
   
   sessions:
