--- a/2016/events.yaml
+++ b/2016/events.yaml
@@ -16,7 +16,7 @@
   - id: 23mar2016.2
     start: 23 Mar 2016 19:45
     title: "ASP.NET MVC Core 1.0: The new kid on the block"
-    speaker: Fanie Reynderz
+    speaker: Fanie Reynders
     description: todo
     videoId: .
     slidesId: .
