--- a/2016/events.yaml
+++ b/2016/events.yaml
@@ -17,7 +17,7 @@
     completed: false
 
   - timeslot: 19:45 - 20:00
-    title: Break
+    title: Pauze
     
   - id: 23mar2016.2
     timeslot: 20:00 - 20:45
@@ -29,5 +29,5 @@
     completed: false
 
   - timeslot: 20:45 - 21:00
-    title: Borrel (cashbar)
+    title: Borrel (eigen kosten)
     
