--- a/2016/events.yaml
+++ b/2016/events.yaml
@@ -14,7 +14,7 @@
     videoId: .
     description: todo
     slidesId: .
-    completed: true
+    completed: false
 
   - timeslot: 19:45 - 20:00
     title: Pauze
