--- a/2016/speakers.yaml
+++ b/2016/speakers.yaml
@@ -3,12 +3,6 @@
   twitter: faniereynders
   blogUrl: http://reynders.co
   imageUrl: http://reynders.co/content/images/2015/12/20150816_184719000_iOS.jpg
-  bio: some desc
+  bio: A South African living in The Netherlands, Angular junkie, technology evangelist, blogger, speaker and the happiest .NET MVP
   
-- name: Tanya Fouche
-  title: Software developer
-  twitter: tanya
-  blogUrl: http://reynders.co
-  imageUrl: https://media.licdn.com/media/p/3/005/04e/004/2524ea2.jpg
-  bio: some desc
 
