--- a/2016/events.yaml
+++ b/2016/events.yaml
@@ -1,4 +1,4 @@
-- date: 24 Mar 2016
+- date: 24 Mar 2016 19:00
   title: March Meetup
   description: Een gratis seminar over Windows IoT, Raspberry Pi & ASP.NET MVC 6
   registerUrl: 
@@ -31,7 +31,7 @@
   - timeslot: 20:45 - 21:00
     title: Borrel
 
-- date: 26 May 2016
+- date: 26 May 2016 19:00
   title: May Meetup
   description: T.B.A.
   registerUrl: 
@@ -64,7 +64,7 @@
   - timeslot: 20:45 - 21:00
     title: Borrel
 
-- date: 28 Jul 2016
+- date: 28 Jul 2016 19:00
   title: July Meetup
   description: T.B.A.
   registerUrl: 
@@ -97,7 +97,7 @@
   - timeslot: 20:45 - 21:00
     title: Borrel
     
-- date: 22 Sep 2016
+- date: 22 Sep 2016 19:00
   title: September Meetup
   description: T.B.A.
   registerUrl: 
@@ -130,7 +130,7 @@
   - timeslot: 20:45 - 21:00
     title: Borrel
 
-- date: 17 Nov 2016
+- date: 17 Nov 2016 19:00
   title: November Meetup
   description: T.B.A.
   registerUrl: 
