--- a/2016/events.yaml
+++ b/2016/events.yaml
@@ -1,6 +1,6 @@
 - date: 24 Mar 2016 19:00
   title: March Meetup
-  description: Een gratis seminar over Windows IoT, Raspberry Pi & ASP.NET MVC 6
+  description: Een gratis seminar over Windows IoT, Raspberry Pi & ASP.NET MVC Core
   registerUrl: 
   
   sessions:
