--- a/2016/events.yaml
+++ b/2016/events.yaml
@@ -1,7 +1,7 @@
 - date: 24 Mar 2016 19:00
   title: March Meetup
   description: Een gratis seminar over Windows IoT, Raspberry Pi & ASP.NET MVC Core
-  registerUrl: 
+  registerUrl: http://www.meetup.com/fixxup/events/228868050/
   
   sessions:
   - timeslot: 18:45 - 19:00
