--- a/2016/posts.yaml
+++ b/2016/posts.yaml
@@ -1,24 +1,5 @@
-- date: 1 Feb 2016
-  postId: test-post3
-  author: Tanya Fouche
-  title: Testing Blog Post 2
-  abstract: bla
-  
-- date: 2 Feb 2016
-  postId: test-post
-  author: Fanie Reynders
-  title: Testing Blog Post
-  abstract: test123
-  sessionId: 2feb2016.1
-
-- date: 3 Feb 2016
-  postId: test-post2
-  author: Some guy1
-  title: Testing Blog Post 2
-  abstract: bla
-  
-- date: 3 Feb 2016
-  postId: test
-  author: Robert-Jan Kuyper
-  title: Test
-  abstract: Hallo
+#- date: 
+#  postId: 
+#  author: 
+#  title: 
+#  abstract: 
