--- a/2016/events.yaml
+++ b/2016/events.yaml
@@ -21,9 +21,9 @@
     
   - id: 2016.2
     timeslot: 20:00 - 20:45
-    title: "ASP.NET MVC Core 1.0: The new kid on the block"
+    title: "MVC in ASP.NET Core: The new kid on the block"
     speaker: Fanie Reynders
-    description: So much exciting stuff has happened with ASP.NET lately. In this session Fanie Reynders focuses on ASP.NET MVC Core 1, a brand new framework for the next generation of the .NET Platform, and teaches us how you can quickly get on-board using it - even your current MVC & Web API knowledge.
+    description: So much exciting stuff has happened with ASP.NET lately. In this session Fanie Reynders focuses specifically on MVC in ASP.NET Core, a brand new framework for the next generation of the .NET Platform, and teaches us how you can quickly get on-board using it - even your current MVC & Web API knowledge.
     videoId: naO5bU2rRFk
     slidesId: 
     completed: false
