--- a/2016/events.yaml
+++ b/2016/events.yaml
@@ -1,6 +1,6 @@
 - date: 24 Mar 2016 19:00
   title: March Meetup
-  description: Een gratis seminar over Windows IoT, Raspberry Pi & ASP.NET MVC Core
+  description: Een gratis seminar over Windows IoT, Raspberry Pi & ASP.NET Core
   registerUrl: http://www.meetup.com/fixxup/events/228868050/
   
   sessions:
