--- a/2016/events.yaml
+++ b/2016/events.yaml
@@ -42,10 +42,10 @@
     
   - id: 2016.3
     timeslot: 19:00 - 19:45
-    title: 
-    speaker: 
+    title: Testing... What?
+    speaker: Ryan Fester
     videoId: 
-    description: 
+    description: An open discussion on the different types of testing,  best practices and their place in agile methodologies and the development lifecycle in general.
     slidesId: 
     completed: false
 
