--- a/2016/speakers.yaml
+++ b/2016/speakers.yaml
@@ -25,6 +25,13 @@
   blogUrl: http://reynders.co
   imageUrl: http://reynders.co/content/images/2015/12/20150816_184719000_iOS.jpg
   bio: A South African living in The Netherlands, Angular junkie, technology evangelist, blogger, speaker and Microsoft Visual Studio & Development Technologies MVP
+
+- name: Ryan Fester
+  title: Software Developer
+  twitter: 
+  blogUrl: 
+  imageUrl: 
+  bio: 
   
   
   
