--- a/2016/speakers.yaml
+++ b/2016/speakers.yaml
@@ -30,7 +30,7 @@
   title: Software Developer
   twitter: 
   blogUrl: 
-  imageUrl: 
+  imageUrl: https://scontent-amt2-1.xx.fbcdn.net/hphotos-xat1/v/t1.0-9/10599548_1379873958972464_8581548922730371573_n.jpg
   bio: 
   
   
