--- a/2016/speakers.yaml
+++ b/2016/speakers.yaml
@@ -30,7 +30,7 @@
   title: Software Developer
   twitter: 
   blogUrl: 
-  imageUrl: https://scontent-amt2-1.xx.fbcdn.net/hphotos-xat1/v/t1.0-9/10599548_1379873958972464_8581548922730371573_n.jpg?oh=51b927e9380a892336b7cbd8060a9704&oe=57576D08
+  imageUrl: https://media.licdn.com/media/p/3/005/063/367/0d3f3a8.jpg
   bio: 
   
   
