--- a/2016/speakers.yaml
+++ b/2016/speakers.yaml
@@ -17,7 +17,7 @@
   twitter: yreynhout
   blogUrl: http://bittacklr.be/
   imageUrl: https://pbs.twimg.com/profile_images/697900517725491201/EYxWWCUi.jpg
-  bio: Software moulder. Deep thinker. Belgian Beer addict. BBQ fanboy. Son of a beach.
+  bio: Consultant specialized in building products using acronyms and buzzwords that will make you blush.
 
 - name: Fanie Reynders
   title: Software Developer
