--- a/2016/events.yaml
+++ b/2016/events.yaml
@@ -75,8 +75,8 @@
     
   - id: 2016.5
     timeslot: 19:00 - 19:45
-    title: 
-    speaker: 
+    title: T.B.A.
+    speaker: Pieter Joost van de Sande
     videoId: 
     description: 
     slidesId: 
@@ -87,8 +87,8 @@
     
   - id: 2016.6
     timeslot: 20:00 - 20:45
-    title: 
-    speaker: 
+    title: T.B.A.
+    speaker: Johan Welgemoed
     description: 
     videoId: 
     slidesId: 
