--- a/2016/speakers.yaml
+++ b/2016/speakers.yaml
@@ -32,6 +32,13 @@
   blogUrl: 
   imageUrl: https://media.licdn.com/media/p/3/005/063/367/0d3f3a8.jpg
   bio: 
+
+- name: Johan Welgemoed
+  title: Software Developer
+  twitter: 
+  blogUrl: 
+  imageUrl: "https://scontent-amt2-1.xx.fbcdn.net/hphotos-xfa1/v/t1.0-0/r90/p206x206/11138641_10153007897310547_7650266693259818664_n.jpg?oh=1e1c9c7bbb359611a311a324918fb078&oe=575F36AA"
+  bio: 
   
   
   
