--- a/2016/posts.yaml
+++ b/2016/posts.yaml
@@ -10,4 +10,4 @@
   postId: mvc-in-aspnet-core
   author: Fanie Reynders
   title: MVC in ASP.NET Core: The new kid on the block
-  abstract: So much exciting stuff has happened with ASP.NET lately. In this session Fanie Reynders focuses specifically on MVC in ASP.NET Core, a brand new framework for the next generation of the .NET Platform, and teaches us how you can quickly get on-board using it - even your current MVC & Web API knowledge.
+  abstract: "So much exciting stuff has happened with ASP.NET lately. In this session Fanie Reynders focuses specifically on MVC in ASP.NET Core, a brand new framework for the next generation of the .NET Platform, and teaches us how you can quickly get on-board using it - even your current MVC & Web API knowledge."
