--- a/2016/events.yaml
+++ b/2016/events.yaml
@@ -25,7 +25,7 @@
     speaker: Fanie Reynders
     description: So much exciting stuff has happened with ASP.NET lately. In this session Fanie Reynders focuses specifically on MVC in ASP.NET Core, a brand new framework for the next generation of the .NET Platform, and teaches us how you can quickly get on-board using it - even your current MVC & Web API knowledge.
     videoId: naO5bU2rRFk
-    slidesId: 
+    slidesId: 768f6b158eff462fb80d20278d0e33c1
     completed: true
 
   - timeslot: 20:45 - 21:00
