--- a/2016/events.yaml
+++ b/2016/events.yaml
@@ -35,6 +35,7 @@
   title: May Meetup
   description: Testing & Design challenges
   registerUrl: http://www.meetup.com/fixxup/events/229221253/
+  isCurrent: true
   
   sessions:
   - timeslot: 18:45 - 19:00
