--- a/2016/events.yaml
+++ b/2016/events.yaml
@@ -13,7 +13,7 @@
     speaker: Marcel Meijer
     videoId: Ez21afJSy20
     description: IoT is everywhere and it will be used in more occasions; cars, houses, entertaining systems etc. There are different platforms for this, but Microsoft has started to a whole new ecosystem. In this session Marcel Meijer shows us how easy is it to develop, deploy and use a Raspberry PI with Windows 10 - using current Microsoft and .NET knowledge we all love.
-    slidesId: 
+    slidesId: 75819c41344b4b129ef292fddc9029b4
     completed: true
 
   - timeslot: 19:45 - 20:00
