--- a/2016/speakers.yaml
+++ b/2016/speakers.yaml
@@ -10,7 +10,7 @@
   twitter: pjvds
   blogUrl: http://born2code.net/
   imageUrl: http://born2code.net/assets/img/pieterjoostvandesande.png
-  bio: "@golang hacker, boardmember at Devnology, Microsoft C# MVP, speaker extravaganza, paleo, barefoot runner"
+  bio: "Pieter Joost van de Sande is an software developer at Happy Pancake. The largest online dating service of Sweden. He actively contributes to numerous open source projects. He is not bound to a specific language or platform, but rather likes to explore the differences."
 
 - name: Yves Reynhout
   title: Technical Team Lead
