--- a/2016/events.yaml
+++ b/2016/events.yaml
@@ -66,7 +66,7 @@
 
 - date: 28 Jul 2016 19:00
   title: July Meetup
-  description: T.B.A.
+  description: MicroServices, Intelligent Bots, IoT and Azure
   registerUrl: 
   
   sessions:
@@ -87,9 +87,9 @@
     
   - id: 2016.6
     timeslot: 20:00 - 20:45
-    title: T.B.A.
-    speaker: Johan Welgemoed
-    description: 
+    title: Build intelligent bots with IoT on Azure
+    speaker: Fanie Reynders
+    description: This session is jam packed with demos showcasing what is possible when combining Microsoft Bot Framework, Skype, Facebook, Microsoft Cognative Services, a Raspberry Pi, Power Bi and of course Microsoft Azure. Bring gloves because it's coming in hot!
     videoId: 
     slidesId: 
     completed: false
