--- a/2016/speakers.yaml
+++ b/2016/speakers.yaml
@@ -38,7 +38,7 @@
   twitter: 
   blogUrl: 
   imageUrl: https://media.licdn.com/media/p/3/005/063/367/0d3f3a8.jpg
-  bio: 
+  bio: A beach bum living in the urban jungle, Software Developer with experience from mainframe (PL/1) to Java Enterprise and actually enjoys writing tests
   
   
   
