--- a/2016/events.yaml
+++ b/2016/events.yaml
@@ -44,7 +44,7 @@
     timeslot: 19:00 - 19:45
     title: Testing... What?
     speaker: Ryan Fester
-    videoId: 
+    videoId: "nfSnhWiUsd8"
     description: An open discussion on the different types of testing,  best practices and their place in agile methodologies and the development life cycle in general.
     slidesId: 
     completed: false
@@ -57,7 +57,7 @@
     title: Design Challenges
     speaker: Yves Reynhout
     description: As developers, from time to time, we have to solve complex problems for our clients/customers - the good, the bad and the ugly designs we end up with do not often see the light of day. This whiteboard talk will show you some concrete problems, how their solutions were designed, why some models wouldn't have worked and others did, leaving you with insight that might help you in your next design challenges.
-    videoId: 
+    videoId: "8pIGx-K19J4"
     slidesId: 
     completed: false
 
