--- a/2016/posts.yaml
+++ b/2016/posts.yaml
@@ -11,3 +11,17 @@
   author: Fanie Reynders
   title: "MVC in ASP.NET Core: The new kid on the block"
   abstract: "So much exciting stuff has happened with ASP.NET lately. In this session Fanie Reynders focuses specifically on MVC in ASP.NET Core, a brand new framework for the next generation of the .NET Platform, and teaches us how you can quickly get on-board using it - even your current MVC & Web API knowledge."
+
+- date: 26 May 2016
+  sessionId: 2016.3
+  postId: tesring-what
+  author: Ryan Fester
+  title: "Testing... What?"
+  abstract: "An open discussion on the different types of testing, best practices and their place in agile methodologies and the development life cycle in general."
+
+- date: 26 May 2016
+  sessionId: 2016.3
+  postId: design-challenges
+  author: Yves Reynhout
+  title: "Design Challenges"
+  abstract: "As developers, from time to time, we have to solve complex problems for our clients/customers - the good, the bad and the ugly designs we end up with do not often see the light of day. This whiteboard talk will show you some concrete problems, how their solutions were designed, why some models wouldn't have worked and others did, leaving you with insight that might help you in your next design challenges."
