--- a/2016/posts.yaml
+++ b/2016/posts.yaml
@@ -14,7 +14,7 @@
 
 - date: 26 May 2016
   sessionId: 2016.3
-  postId: tesing-what
+  postId: testing-what
   author: Ryan Fester
   title: "Testing... What?"
   abstract: "An open discussion on the different types of testing, best practices and their place in agile methodologies and the development life cycle in general."
