--- a/2016/events.yaml
+++ b/2016/events.yaml
@@ -67,8 +67,7 @@
 - date: 28 Jul 2016 19:00
   title: July Meetup
   description: MicroServices, Intelligent Bots, IoT and Azure
-  registerUrl: 
-  
+  registerUrl: http://www.meetup.com/fixxup/events/231389959/
   sessions:
   - timeslot: 18:45 - 19:00
     title: Aanvang
