--- a/2016/posts.yaml
+++ b/2016/posts.yaml
@@ -25,3 +25,10 @@
   author: Yves Reynhout
   title: "Design Challenges"
   abstract: "As developers, from time to time, we have to solve complex problems for our clients/customers - the good, the bad and the ugly designs we end up with do not often see the light of day. This whiteboard talk will show you some concrete problems, how their solutions were designed, why some models wouldn't have worked and others did, leaving you with insight that might help you in your next design challenges."
+
+- date: 28 Jul 2016
+  sessionId: 2016.5
+  postId: design-challenges
+  author: Pieter Joost van de Sande
+  title: "A multi year journey of implementing MicroServices"
+  abstract: "With MicroServices you try to develop a single as a suite of small services and independent services. It promises a resilient and scalable system that boosts the agility of your software development. In this talk I will share a multi year journey of implementing MicroServices. I will start by explaining what problems we tried to solve switching to a MicroServices based system. I will give concrete examples of the challenges we faced while transitioning and how we dealt with them."
